--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
   <section class="container-fluid w-100 d-flex justify-content-center">
     <div id="exTab3" class="row tab-outer">
-      <ul class="nav nav-pills d-flex flex-column align-items-center col-md-7 col-12 p-0 justify-content-between tab-inner">
+      <ul class="nav nav-pills d-flex flex-column align-items-center col-md-7 col-12 justify-content-between tab-inner">
         <h1 class="mb-5">Is your answer <span style="color: #06817d;">“YES”</span> to any of these categories</h1>
         <li class="nav-item  w-100" role="presentation">
           <p href="#1b" data-toggle="tab" class="nav-link  d-flex align-items-center justify-content-around"
@@ -172,7 +172,7 @@
             to become full stack developer in MERN <i class="fas fa-chevron-right"></i></p>
         </li>
       </ul>
-      <div class="col-md-5 bg-danger p-0 col-12">
+      <div class="col-md-5  nav-pills-inner col-12">
         <div class="tab-content">
           <div class="tab-pane" id="1b">
             <div class="d-flex flex-column pt-5 justify-content-end align-items-start tab-lower">
@@ -246,6 +246,7 @@
         align-items-center
         flex-column
         should-main
+       
       ">
       <h1 class="text-center text-white">
         Who is this membership for?
@@ -388,15 +389,15 @@
           </p>
         </div>
       </div>
-      <div class="col-md-5 col-12">
-        <div>
+      <div class="col-md-5 col-12 h-100">
+        <div class="h-100">
           <div class="mb-3 d-flex">
-            <img src="./Images/img-3.png" class="mr-2 w-50 hover-img" alt="" />
-            <img src="./Images/img-1.png" alt="" class="w-50" />
+            <img src="./Images/img-3.png" class="mr-2 h-100 w-50 hover-img" alt="" />
+            <img src="./Images/img-1.png" alt="" class="w-50 h-100" />
           </div>
           <div class="d-flex">
-            <img src="./Images/img-1.png" class="mr-2 w-50" alt="" />
-            <img src="./Images/img-1.png" alt="" class="w-50" />
+            <img src="./Images/img-1.png" class="mr-2 w-50  h-100" alt="" />
+            <img src="./Images/img-1.png" alt="" class="w-50  h-100" />
           </div>
         </div>
       </div>
