--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
   <nav id="navbar1" class="navbar pt-3 pb-3 navbar-expand-md">
     <div class="container">
       <img src="./Images/mentorkart3.png" alt="">
-      <button class="navbar-toggler bg-white toggler-example" type="button" data-toggle="collapse"
+      <!-- <button class="navbar-toggler bg-white toggler-example" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
         aria-label="Toggle navigation"><span class="dark-blue-text">
           <i class="fa fa-bars fa-1x"></i></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+      </button> -->
+      <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent1">
         <ul class="nav header-navbar navbar-nav ml-auto">
           <li class="nav-item log"><a class="nav-link login" id="active1" href="#Home">Login</a></li>
           <li class="nav-item"><a class="nav-link signup" id="active3" href="#Contact">Signup</a></li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </nav>
 
@@ -455,27 +455,27 @@
       <div class="row should-inners">
         <div class="col-md-6 col-12 mb-4">
           <div class="col-md-12 should-bar">
-            <img src="./Images/Group.png" alt="" />
+            <img src="./Images/un2.png" style="width:35px" alt="" />
             <p>Looking for lucrative career opportunities
             </p>
           </div>
         </div>
         <div class="col-md-6 col-12 mb-4">
           <div class="col-md-12 should-bar">
-            <img src="./Images/Group.png" alt="" />
+            <img src="./Images/un2.png" style="width:35px" alt="" />
             <p>Upskilling for better career growth </p>
           </div>
         </div>
         <div class="col-md-6 col-12 mb-4">
           <div class="col-md-12 should-bar">
-            <img src="./Images/Group.png" alt="" />
+            <img src="./Images/un2.png" style="width:35px" alt="" />
             <p>Reskilling for career transition
             </p>
           </div>
         </div>
         <div class="col-md-6 col-12 mb-4">
           <div class="col-md-12 should-bar">
-            <img src="./Images/Group.png" alt="" />
+            <img src="./Images/un2.png" style="width:35px" alt="" />
             <p>Looking for fresh job or job change
             </p>
           </div>
@@ -599,6 +599,11 @@
             </div>
           </div>
         </div>
+        <p class="banner-btn membership-btn mt-4">
+          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">99 only</span>
+          with
+          <span class="text-dark font-weight-bolder ml-1">4 weeks access</span>
+        </p>
       </div>
       <div class="col-md-5 col-12 w-100 h-100 p-0">
         <div class="h-100 w-100">
@@ -641,11 +646,7 @@
           </div>
         </div>
       </div>
-      <p class="banner-btn membership-btn mt-4">
-        Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">99 only</span>
-        with
-        <span class="text-dark font-weight-bolder ml-1">4 weeks access</span>
-      </p>
+     
     </div>
   </div>
 
@@ -714,9 +715,8 @@
               <div class="frame-inner">
                 <img src="./Images/Frame 3.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 1</h3>
-                <p style="line-height: 30px">
-                  You enroll for the program & First LIVE session with mentor
-                  Starts
+                <p style="line-height: 25px">
+                  Attend your favorite job role live session or even you can attend every Live Session- No Restrictions 
                 </p>
               </div>
             </div>
@@ -725,10 +725,9 @@
             <div class="col-md-12">
               <div class="frame-inner">
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
-                <h3 class="font-weight-bolder">week 1</h3>
+                <h3 class="font-weight-bolder">week 3</h3>
                 <p style="line-height: 30px">
-                  You enroll for the program & First LIVE session with mentor
-                  Starts
+                  Attend Live Session on Interview Skills 
                 </p>
               </div>
             </div>
@@ -737,10 +736,9 @@
             <div class="col-md-12">
               <div class="frame-inner">
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
-                <h3 class="font-weight-bolder">week 1</h3>
+                <h3 class="font-weight-bolder">week 3</h3>
                 <p style="line-height: 30px">
-                  You enroll for the program & First LIVE session with mentor
-                  Starts
+                  Participate in Mock group discussions to test your skills 
                 </p>
               </div>
             </div>
@@ -749,10 +747,11 @@
             <div class="col-md-12">
               <div class="frame-inner">
                 <img src="./Images/Frame 6.png" class="w-25 mb-2" alt="" />
-                <h3 class="font-weight-bolder">week 1</h3>
+                <h3 class="font-weight-bolder">week 4</h3>
                 <p style="line-height: 30px">
-                  You enroll for the program & First LIVE session with mentor
-                  Starts
+                  Mega LIVE Mentorship session by
+                  Vijay Sethi
+                  ex Head Human Resource of Hero Motocorp
                 </p>
               </div>
             </div>
