--- a/index.html
+++ b/index.html
@@ -493,18 +493,18 @@
   </section>
 
 
-  <!-- <section class="container-fluid mt-5 d-flex flex-column align-items-center justify-content-center">
-    <div class="mb-5 d-flex flex-column justify-content-center align-self-baseline">
+  <section class="google-outer mt-5 d-flex flex-column align-items-center justify-content-center">
+    <div class="mb-5 d-flex google-outer-text justify-content-center">
       <h1 class="font-weight-bold mb-4 pl-2 pr-2 align-self-baseline">Our Mentors have worked for</h1>
     </div>
     <div class="owl-carousel owl-theme" id="carouselThird">
-      <img src="./Images/google.png.png" alt="">
-      <img src="./Images/mer.png" alt="">
-      <img src="./Images/pizher.png" alt="">
-      <img src="./Images/hero.png" alt="">
-      <img src="./Images/pmg.png" alt="">
+      <img src="./Images/google1.png" alt="">
+      <img src="./Images/hero1.png" alt="">
+      <img src="./Images/mer1.png" alt="">
+      <img src="./Images/pizher1.png" alt="">
+      <img src="./Images/volvo1.png" alt="">
     </div>
-  </section> -->
+  </section>
 
   <!-- <section class="container-fluid d-flex flex-column align-items-center justify-content-center"
     style="margin-top: 80px;">
