--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
   <nav id="navbar1" class="navbar pt-3 pb-3 navbar-expand-md">
     <div class="container">
-      <img src="./Images/mentorkart3.png" alt="">
+      <img src="./Images/mentorkart3.png" style="width: 100px;" class="d-md-none d-sm-none d-none d-lg-flex" alt="">
+      <img src="./Images/mentorWhite.png" class="d-md-flex d-lg-none" style="width: 100px;" alt="">
       <!-- <button class="navbar-toggler bg-white toggler-example" type="button" data-toggle="collapse"
         data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false"
         aria-label="Toggle navigation"><span class="dark-blue-text">
@@ -126,7 +127,7 @@
           </p>
         </div>
       </div>
-      <div class="col-md-5 col-12 banner-img">
+      <div class="col-md-5 col-12 banner-img position-relative">
         <!-- <img src="./Images/bgImg.png" class="img-fluid w-75" style="position: absolute; top: 80%; left: 15%;" alt=""> -->
       </div>
     </div>
@@ -497,12 +498,12 @@
     <div class="mb-5 d-flex google-outer-text justify-content-center">
       <h1 class="font-weight-bold mb-4 pl-2 pr-2 align-self-baseline">Our Mentors have worked for</h1>
     </div>
-    <div class="owl-carousel owl-theme" id="carouselThird">
-      <img src="./Images/google1.png" alt="">
-      <img src="./Images/hero1.png" alt="">
-      <img src="./Images/mer1.png" alt="">
-      <img src="./Images/pizher1.png" alt="">
-      <img src="./Images/volvo1.png" alt="">
+    <div class="owl-carousel owl-img owl-theme" id="carouselThird">
+      <img src="./Images/google2.png"  alt="">
+      <img src="./Images/hero3.png"  alt="">
+      <img src="./Images/merc3.png" alt="">
+      <img src="./Images/pizher2.png"  alt="">
+      <img src="./Images/vovlo2.png"  alt="">
     </div>
   </section>
 
