--- a/index.html
+++ b/index.html
@@ -245,92 +245,92 @@
     </div>
   </div>
 
-<section class="container-fluid tab-main-1 justify-content-center align-items-center">
-  <div class="tab-inner-main d-flex">
-    <ul id="tabs" class="nav nav-tabs" role="tablist">
-      <h1>Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
-      <li class="nav-item">
-        <a id="tab-A" href="#pane-A" class="nav-link" data-toggle="tab" role="tab">Want
-          to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a id="tab-B" href="#pane-B" class="nav-link" data-toggle="tab" role="tab">Want
-          to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a id="tab-C" href="#pane-C" class="nav-link active" data-toggle="tab" role="tab">Want
-          to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a id="tab-D" href="#pane-D" class="nav-link" data-toggle="tab" role="tab">Want
-          to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-      </li>
-      <li class="nav-item">
-        <a id="tab-E" href="#pane-E" class="nav-link " data-toggle="tab" role="tab">Want
-          to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-      </li>
-    </ul>
+  <section class="container-fluid tab-main-1 justify-content-center align-items-center">
+    <div class="tab-inner-main d-flex">
+      <ul id="tabs" class="nav nav-tabs" role="tablist">
+        <h1>Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
+        <li class="nav-item">
+          <a id="tab-A" href="#pane-A" class="nav-link" data-toggle="tab" role="tab">Want
+            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        </li>
+        <li class="nav-item">
+          <a id="tab-B" href="#pane-B" class="nav-link" data-toggle="tab" role="tab">Want
+            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        </li>
+        <li class="nav-item">
+          <a id="tab-C" href="#pane-C" class="nav-link active" data-toggle="tab" role="tab">Want
+            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        </li>
+        <li class="nav-item">
+          <a id="tab-D" href="#pane-D" class="nav-link" data-toggle="tab" role="tab">Want
+            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        </li>
+        <li class="nav-item">
+          <a id="tab-E" href="#pane-E" class="nav-link " data-toggle="tab" role="tab">Want
+            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        </li>
+      </ul>
 
-    <div id="content" class="tab-content" role="tablist">
-      <div id="pane-A" class="card tab-pane fade " role="tabpanel" aria-labelledby="tab-A">
-        <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-          <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-          <h1>Want to become full stack developer in mern 1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-            lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel
-            fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+      <div id="content" class="tab-content" role="tablist">
+        <div id="pane-A" class="card tab-pane fade " role="tabpanel" aria-labelledby="tab-A">
+          <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
+            <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
+            <h1>Want to become full stack developer in mern 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
+              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
+              vel
+              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+          </div>
+        </div>
+
+
+        <div id="pane-B" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-B">
+          <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
+            <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
+            <h1>Want to become full stack developer in mern 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
+              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
+              vel
+              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+          </div>
+
+        </div>
+
+        <div id="pane-C" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-C">
+          <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
+            <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
+            <h1>Want to become full stack developer in mern 3</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
+              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
+              vel
+              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+          </div>
+        </div>
+        <div id="pane-D" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-D">
+          <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
+            <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
+            <h1>Want to become full stack developer in mern 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
+              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
+              vel
+              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+          </div>
+
+        </div>
+        <div id="pane-E" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-E">
+          <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
+            <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
+            <h1>Want to become full stack developer in mern 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
+              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
+              vel
+              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+          </div>
+
         </div>
       </div>
 
-
-      <div id="pane-B" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-B">
-        <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-          <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-          <h1>Want to become full stack developer in mern 1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-            lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel
-            fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
-        </div>
-
-      </div>
-
-      <div id="pane-C" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-C">
-        <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-          <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-          <h1>Want to become full stack developer in mern 3</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-            lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel
-            fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
-        </div>
-      </div>
-      <div id="pane-D" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-D">
-        <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-          <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-          <h1>Want to become full stack developer in mern 1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-            lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel
-            fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
-        </div>
-
-      </div>
-      <div id="pane-E" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-E">
-        <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-          <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-          <h1>Want to become full stack developer in mern 1</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-            lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel
-            fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
-        </div>
-
-      </div>
     </div>
-
-  </div>
   </section>
 
 
@@ -498,12 +498,15 @@
     <div class="mb-5 d-flex google-outer-text justify-content-center">
       <h1 class="font-weight-bold mb-4 pl-2 pr-2 align-self-baseline">Our Mentors have worked for</h1>
     </div>
-    <div class="owl-carousel owl-img owl-theme" id="carouselThird">
-      <img src="./Images/google2.png"  alt="">
-      <img src="./Images/hero3.png"  alt="">
-      <img src="./Images/merc3.png" alt="">
-      <img src="./Images/pizher2.png"  alt="">
-      <img src="./Images/vovlo2.png"  alt="">
+    <div class="owl-carousel owl-theme" id="carouselThird">
+      <div class="owl-img">
+        <img src="./Images/google2.png" alt="">
+      </div>
+      <div class="owl-img"> <img src="./Images/hero3.png" alt=""></div>
+      <div class="owl-img"> <img src="./Images/merc3.png" alt=""></div>
+      <div class="owl-img"> <img src="./Images/pizher2.png" alt=""></div>
+      <div class="owl-img"><img src="./Images/vovlo2.png" alt=""></div>
+
     </div>
   </section>
 
@@ -647,7 +650,7 @@
           </div>
         </div>
       </div>
-     
+
     </div>
   </div>
 
@@ -717,7 +720,7 @@
                 <img src="./Images/Frame 3.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 1</h3>
                 <p style="line-height: 25px">
-                  Attend your favorite job role live session or even you can attend every Live Session- No Restrictions 
+                  Attend your favorite job role live session or even you can attend every Live Session- No Restrictions
                 </p>
               </div>
             </div>
@@ -728,7 +731,7 @@
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 3</h3>
                 <p style="line-height: 30px">
-                  Attend Live Session on Interview Skills 
+                  Attend Live Session on Interview Skills
                 </p>
               </div>
             </div>
@@ -739,7 +742,7 @@
                 <img src="./Images/Frame 4.png" class="w-25 mb-2" alt="" />
                 <h3 class="font-weight-bolder">week 3</h3>
                 <p style="line-height: 30px">
-                  Participate in Mock group discussions to test your skills 
+                  Participate in Mock group discussions to test your skills
                 </p>
               </div>
             </div>
