--- a/index.html
+++ b/index.html
@@ -1211,22 +1211,26 @@
     $("#carouselThird").owlCarousel({
       loop: true,
       margin: 10,
-
-
+      center: true,
+    items:2,
+       dots:false,
       nav: true,
       navText: ["<i class='fas fa-chevron-left'></i>", "<i class='fas fa-chevron-right'></i>"],
       responsive: {
-        0: {
-          items: 1,
-          dots: false,
-        },
-        600: {
-          items: 2,
-          dots: false,
-        },
-        1000: {
-          items: 3,
-        },
+        600:{
+            items:4
+        }
+        // 0: {
+        //   items: 1,
+        //   dots: false,
+        // },
+        // 600: {
+        //   items: 2,
+        //   dots: false,
+        // },
+        // 1000: {
+        //   items: 3,
+        // },
       },
     });
   </script>
