--- a/index.html
+++ b/index.html
@@ -142,102 +142,72 @@
           <div class="card-header" id="faqhead1">
             <a href="#" class="btn btn-header-link" data-toggle="collapse" data-target="#faq1" aria-expanded="true"
               aria-controls="faq1">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+              to become full stack developer in MERN <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq1" class="collapse mt-2 show" aria-labelledby="faqhead1" data-parent="#faq">
             <div class="d-flex card-body flex-column justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
               <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+              <p>MERN stands for Mongo DB, Express.JS, React.JS, Node.Js. MERN is the stack of choice for today’s web
+                developers looking to move quickly. MERN developers are in huge demand. If it fascinates you, you must
+                Join this program. </p>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="card-header" id="faqhead2">
             <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq2"
-              aria-expanded="true" aria-controls="faq2">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+              aria-expanded="true" aria-controls="faq2">Want to become Product Manager <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq2" class="collapse mt-2" aria-labelledby="faqhead2" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-              <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+              <h1>Want to become Product Manager</h1>
+              <p>Be the close partner between marketing and development team and make sure that the product is used by
+                maximum number of users. It is one of the most required skill of today’s time. </p>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="card-header" id="faqhead3">
             <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq3"
-              aria-expanded="true" aria-controls="faq3">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+              aria-expanded="true" aria-controls="faq3">Want to become Data Science Engineer <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq3" class="collapse mt-2" aria-labelledby="faqhead3" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-              <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+              <h1>Want to become Data Science Engineer</h1>
+              <p>Data fascinates all of us but heap of data without useful information is nothing. To bring out meaning
+                information is what the data scientist and data science engineer does. So what are you waiting for?? Join
+                this revolution now. </p>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="card-header" id="faqhead4">
             <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq4"
-              aria-expanded="true" aria-controls="faq4">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+              aria-expanded="true" aria-controls="faq4">Want to become Digital Marketing Expert<i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq4" class="collapse mt-2" aria-labelledby="faqhead4" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-              <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+              <h1>Want to become Digital Marketing Expert</h1>
+              <p>Join the digital marketing revolution, get trained in digital marketing and the tools to elevate your
+                career in digital marketing. Learn the skills which is in high demand. </p>
             </div>
           </div>
         </div>
         <div class="card">
           <div class="card-header" id="faqhead5">
             <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq5"
-              aria-expanded="true" aria-controls="faq5">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+              aria-expanded="true" aria-controls="faq5">Want to become Cyber Security Expert <i class="fas fa-chevron-right ml-4"></i></a>
           </div>
           <div id="faq5" class="collapse mt-2" aria-labelledby="faqhead5" data-parent="#faq">
             <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
               <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-              <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="card-header" id="faqhead6">
-            <a href="#" class="btn btn-header-link collapsed" data-toggle="collapse" data-target="#faq6"
-              aria-expanded="true" aria-controls="faq6">Want
-              to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
-          </div>
-
-          <div id="faq6" class="collapse mt-2" aria-labelledby="faqhead6" data-parent="#faq">
-            <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
-              <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-              <h1>Want to become full stack developer in mern 1</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-                lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-                vel
-                fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+              <h1>Want to become Cyber Security Expert</h1>
+              <p>Cyber Security experts are in demand now more than ever before, as everyone is becoming more and more
+                reliant on their computer, phone etc</p>
             </div>
           </div>
         </div>
@@ -249,25 +219,25 @@
     <div class="tab-inner-main d-flex">
       <ul id="tabs" class="nav nav-tabs" role="tablist">
         <h1>Is your answer <span style="color:#ff7070;">“YES”</span> to any of these categories</h1>
-        <li class="nav-item">
+        <li class="nav-item" style="width: 90%;">
           <a id="tab-A" href="#pane-A" class="nav-link" data-toggle="tab" role="tab">Want
-            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+            to become full stack developer in MERN <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
-        <li class="nav-item">
-          <a id="tab-B" href="#pane-B" class="nav-link" data-toggle="tab" role="tab">Want
-            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        <li class="nav-item" style="width: 90%;">
+          <a id="tab-B" href="#pane-B" class="nav-link" data-toggle="tab" role="tab">Want to become Product Manager <i
+              class="fas fa-chevron-right ml-5"></i></a>
         </li>
-        <li class="nav-item">
-          <a id="tab-C" href="#pane-C" class="nav-link active" data-toggle="tab" role="tab">Want
-            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        <li class="nav-item" style="width: 90%;">
+          <a id="tab-C" href="#pane-C" class="nav-link active" data-toggle="tab" role="tab">Want to become Data Science
+            Engineer <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
-        <li class="nav-item">
-          <a id="tab-D" href="#pane-D" class="nav-link" data-toggle="tab" role="tab">Want
-            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        <li class="nav-item" style="width: 90%;">
+          <a id="tab-D" href="#pane-D" class="nav-link" data-toggle="tab" role="tab">Want to become Digital Marketing
+            Expert <i class="fas fa-chevron-right ml-5"></i></a>
         </li>
-        <li class="nav-item">
-          <a id="tab-E" href="#pane-E" class="nav-link " data-toggle="tab" role="tab">Want
-            to become full stack developer in MERN <i class="fas fa-chevron-right"></i></a>
+        <li class="nav-item" style="width: 90%;">
+          <a id="tab-E" href="#pane-E" class="nav-link " data-toggle="tab" role="tab">Want to become Cyber Security
+            Expert<i class="fas fa-chevron-right ml-5"></i></a>
         </li>
       </ul>
 
@@ -276,10 +246,9 @@
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
             <h1>Want to become full stack developer in mern 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-              vel
-              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+            <p>MERN stands for Mongo DB, Express.JS, React.JS, Node.Js. MERN is the stack of choice for today’s web
+              developers looking to move quickly. MERN developers are in huge demand. If it fascinates you, you must
+              Join this program. </p>
           </div>
         </div>
 
@@ -287,11 +256,9 @@
         <div id="pane-B" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-B">
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-            <h1>Want to become full stack developer in mern 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-              vel
-              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+            <h1>Want to become Product Manager</h1>
+            <p>Be the close partner between marketing and development team and make sure that the product is used by
+              maximum number of users. It is one of the most required skill of today’s time. </p>
           </div>
 
         </div>
@@ -299,32 +266,27 @@
         <div id="pane-C" class="card tab-pane fade show active" role="tabpanel" aria-labelledby="tab-C">
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-            <h1>Want to become full stack developer in mern 3</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-              vel
-              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+            <h1>Want to become Data Science Engineer</h1>
+            <p>Data fascinates all of us but heap of data without useful information is nothing. To bring out meaning
+              information is what the data scientist and data science engineer does. So what are you waiting for?? Join
+              this revolution now. </p>
           </div>
         </div>
         <div id="pane-D" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-D">
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-            <h1>Want to become full stack developer in mern 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-              vel
-              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+            <h1>Want to become Digital Marketing Expert</h1>
+            <p>Join the digital marketing revolution, get trained in digital marketing and the tools to elevate your
+              career in digital marketing. Learn the skills which is in high demand. </p>
           </div>
 
         </div>
         <div id="pane-E" class="card tab-pane fade" role="tabpanel" aria-labelledby="tab-E">
           <div class="d-flex card-body flex-column pt-5 justify-content-end align-items-start tab-lower">
             <img src="./Images/Zip.png.png" class="pt-5 pb-5" alt="">
-            <h1>Want to become full stack developer in mern 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam, purus sit amet luctus venenatis,
-              lectus magna fringilla urna, porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-              vel
-              fringilla est ullamcorper eget nulla facilisi etiam dignissim diam quis</p>
+            <h1>Want to become Cyber Security Expert</h1>
+            <p>Cyber Security experts are in demand now more than ever before, as everyone is becoming more and more
+              reliant on their computer, phone etc</p>
           </div>
 
         </div>
@@ -1211,26 +1173,22 @@
     $("#carouselThird").owlCarousel({
       loop: true,
       margin: 10,
-      center: true,
-    items:2,
-       dots:false,
+
+      //  dots:false,
       nav: true,
       navText: ["<i class='fas fa-chevron-left'></i>", "<i class='fas fa-chevron-right'></i>"],
       responsive: {
-        600:{
-            items:4
-        }
-        // 0: {
-        //   items: 1,
-        //   dots: false,
-        // },
-        // 600: {
-        //   items: 2,
-        //   dots: false,
-        // },
-        // 1000: {
-        //   items: 3,
-        // },
+        0: {
+          items: 1,
+          dots: false,
+        },
+        600: {
+          items: 2,
+          dots: false,
+        },
+        1000: {
+          items: 4,
+        },
       },
     });
   </script>
