--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           ">
         <div>
           <h1 class="w-100 banner-inner-main-text" style="font-weight: 500; font-size: 45px;">
-            MentorKart's Royal MemberShip for all your Career needs
+            MentorKart's Premium MemberShip for all your Career needs
           </h1>
           <p>One membership,for many job opportunites</p>
         </div>
@@ -447,9 +447,9 @@
       <div class="should-last mt-4 d-flex flex-column justify-content-center align-items-center">
         <h4 class="font-weight-lighter text-white mb-4">Think it’s a match?</h4>
         <p class="banner-btn banner-btn-register">
-          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">99 only</span>
+          Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
           with
-          <span class="text-dark font-weight-bolder ml-1">4 weeks access</span>
+          <span class="text-dark font-weight-bolder ml-1">3months access</span>
         </p>
       </div>
     </div>
@@ -634,9 +634,9 @@
     <div class="d-flex flex-row align-items-center justify-content-center">
       <img src="./Images/Polygon 7.png" class="mr-2" alt="" />
       <p class="banner-btn banner-btn-register mt-4">
-        Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">99 only</span>
+        Get it for<span class="ml-2 mr-2 text-dark font-weight-bolder">299 only</span>
         with
-        <span class="text-dark font-weight-bolder ml-1">4 weeks access</span>
+        <span class="text-dark font-weight-bolder ml-1">3months access</span>
       </p>
       <img src="./Images/Polygon 8.png" class="ml-2" alt="" />
     </div>
